--- a/argocd/applications/nextcloud/app.yaml
+++ b/argocd/applications/nextcloud/app.yaml
@@ -27,6 +27,21 @@ spec:
       containers:
         - name: "nextcloud-app"
           env:
+            - name: "NEXTCLOUD_TRUSTED_DOMAINS"
+              value: "cloud.tlake.io mansionsyrup:10100 *.ngrok.io 192.168.0.120"
+
+            - name: "OVERWRITEHOST"
+              value: "cloud.tlake.io"
+
+            - name: "OVERWRITEPROTOCOL"
+              value: "https"
+
+            - name: "OVERWRITECLIURL"
+              value: "https://cloud.tlake.io"
+
+            - name: "OVERWRITEWEBROOT"
+              value: "/"
+
             - name: "POSTGRES_DB"
               valueFrom:
                 secretKeyRef:
@@ -47,6 +62,9 @@ spec:
                 secretKeyRef:
                   name: "config"
                   key: "postgres_user"
+
+            - name: "TRUSTED_PROXIES"
+              value: "192.168.0.208/29"
 
             - name: "TZ"
               value: "America/Los_Angeles"
