--- a/argocd/applications/nextcloud/persistent-volumes.yaml
+++ b/argocd/applications/nextcloud/persistent-volumes.yaml
@@ -31,7 +31,7 @@ apiVersion: v1
 metadata:
   name: "nextcloud-config"
 spec:
-  storageClassName: "nfs-client"
+  storageClassName: "microk8s-hostpath"
   accessModes:
     - ReadWriteMany
   resources:
