--- a/argocd/applications/nextcloud/persistent-volumes.yaml
+++ b/argocd/applications/nextcloud/persistent-volumes.yaml
@@ -1,6 +1,20 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
+  name: "nextcloud-transfer"
+spec:
+  storageClassName: "nfs-client"
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: "500Gi"
+
+---
+
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
   name: "nextcloud-data"
 spec:
   storageClassName: "nfs-client"
