use sh instead of bash

--- a/argocd/applications/nextcloud/app.yaml
+++ b/argocd/applications/nextcloud/app.yaml
@@ -27,7 +27,7 @@ spec:
     spec:
       containers:
         - name: "nextcloud-transfer"
-          command: [ "/bin/bash", "-c", "--" ]
+          command: [ "/bin/sh", "-c", "--" ]
           args: [ "while true; do sleep 30; done;" ]
           image: "alpine:latest"
           volumeMounts:
