--- a/argocd/applications/nextcloud/persistent-volumes.yaml
+++ b/argocd/applications/nextcloud/persistent-volumes.yaml
@@ -52,3 +52,17 @@ spec:
     requests:
       storage: "10Mi"
 
+---
+
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
+  name: "nextcloud-storage-backup"
+spec:
+  storageClassName: "nfs-client"
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: "10Mi"
+
