--- a/argocd/applications/nextcloud/rsync.yaml
+++ b/argocd/applications/nextcloud/rsync.yaml
@@ -61,7 +61,7 @@ spec:
               mountPath: "/data/destination"
 
             - name: "crontab"
-              mountPath: "/rsync"
+              mountPath: "/rsync/crontab"
               subPath: "crontab"
 
       volumes:
