--- a/argocd/applications/nextcloud/cron.yaml
+++ b/argocd/applications/nextcloud/cron.yaml
@@ -40,8 +40,15 @@ spec:
             - mountPath: "/var/www/html"
               name: "nextcloud-storage"
 
+            - mountPath: "/var/www/html/data"
+              name: "nextcloud-data"
+
       volumes:
         - name: "nextcloud-storage"
           persistentVolumeClaim:
             claimName: "nextcloud-storage"
+
+        - name: "nextcloud-data"
+          persistentVolumeClaim:
+            claimName: "nextcloud-data"
 
