--- a/argocd/applications/template/deployment.yaml
+++ b/argocd/applications/template/deployment.yaml
@@ -7,26 +7,34 @@ metadata:
 
 spec:
   replicas: 1
+  revisionHistoryLimit: 0
+
   selector:
     matchLabels:
       app: "CHANGE_APP_IDENTIFIER"
+
   template:
     metadata:
       labels:
         app: "CHANGE_APP_IDENTIFIER"
+
     spec:
       containers:
         - name: "CHANGE_APP_IDENTIFIER"
+          image: "CHANGE_IMAGE_REF"
+
           env:
             - name: "CHANGE_ENVVAR_NAME"
               value: "CHANGE_ENVVAR_VALUE"
-          image: "CHANGE_IMAGE_REF"
+
           ports:
             - name: "app"
               containerPort: CHANGE_PORT_NUMBER
+
           volumeMounts:
             - name: "CHANGE_VOLUME_NAME"
               mountPath: "/CHANGE_MOUNT_PATH"
+
       volumes:
         - name: "CHANGE_VOLUME_NAME"
           persistentVolumeClaim:
