--- a/argocd/applications/foundryvtt/deployment.yaml
+++ b/argocd/applications/foundryvtt/deployment.yaml
@@ -28,7 +28,7 @@ spec:
               value: "/data/container_cache"
             
             - name: "CONTAINER_CACHE_SIZE"
-              value: 10
+              value: "10"
             
             - name: "FOUNDRY_ADMIN_KEY"
               valueFrom:
@@ -68,7 +68,7 @@ spec:
 
           ports:
             - name: "foundryvtt"
-              containerPort: 30000
+              containerPort: "30000"
 
           volumeMounts:
             - name: "foundryvtt-container-cache"
