but port can't be string

--- a/argocd/applications/foundryvtt/deployment.yaml
+++ b/argocd/applications/foundryvtt/deployment.yaml
@@ -68,7 +68,7 @@ spec:
 
           ports:
             - name: "foundryvtt"
-              containerPort: "30000"
+              containerPort: 30000
 
           volumeMounts:
             - name: "foundryvtt-container-cache"
