--- a/argocd/applications/foundryvtt-ando/deployment.yaml
+++ b/argocd/applications/foundryvtt-ando/deployment.yaml
@@ -74,6 +74,8 @@ spec:
             - name: "foundryvtt-ando-data"
               mountPath: "/data"
 
+      hostname: "ando_mcfoundry_host"
+
       volumes:
         - name: "foundryvtt-ando-container-cache"
           persistentVolumeClaim:
