--- a/argocd/applications/foundryvtt-ando/deployment.yaml
+++ b/argocd/applications/foundryvtt-ando/deployment.yaml
@@ -74,7 +74,7 @@ spec:
             - name: "foundryvtt-ando-data"
               mountPath: "/data"
 
-      hostname: "ando_mcfoundry_host"
+      hostname: "ando-mcfoundry-host"
 
       volumes:
         - name: "foundryvtt-ando-container-cache"
