no, just make a load volume

--- a/argocd/applications/foundryvtt/persistent-volumes.yaml
+++ b/argocd/applications/foundryvtt/persistent-volumes.yaml
@@ -43,6 +43,20 @@ spec:
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
+  name: "load"
+spec:
+  storageClassName: "nfs-client"
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: "20Gi"
+
+---
+
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
   name: "rsync"
 spec:
   storageClassName: "nfs-client"
