--- a/argocd/applications/foundryvtt/deployment.yaml
+++ b/argocd/applications/foundryvtt/deployment.yaml
@@ -77,6 +77,9 @@ spec:
             - name: "data"
               mountPath: "/data"
 
+            - name: "load"
+              mountPath: "/load"
+
         - name: "rsync"
           image: "ogivuk/rsync:latest"
 
@@ -108,6 +111,10 @@ spec:
         - name: "data"
           persistentVolumeClaim:
             claimName: "data"
+
+        - name: "load"
+          persistentVolumeClaim:
+            claimName: "load"
 
         - name: "backup"
           persistentVolumeClaim:
