--- a/argocd/applications/foundryvtt-ando/persistent-volumes.yaml
+++ b/argocd/applications/foundryvtt-ando/persistent-volumes.yaml
@@ -1,26 +1,68 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: "foundryvtt-ando-container-cache"
+  name: "container-cache"
 spec:
   storageClassName: "nfs-client"
   accessModes:
     - ReadWriteMany
   resources:
     requests:
-      storage: "10Mi"
+      storage: "2Gi"
 
 ---
 
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: "foundryvtt-ando-data"
+  name: "data"
+spec:
+  storageClassName: "microk8s-hostpath"
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: "20Gi"
+
+---
+
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
+  name: "backup"
 spec:
   storageClassName: "nfs-client"
   accessModes:
     - ReadWriteMany
   resources:
     requests:
-      storage: "10Mi"
+      storage: "20Gi"
+
+---
+
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
+  name: "rsync"
+spec:
+  storageClassName: "nfs-client"
+  accessModes:
+    - ReadOnlyMany
+  resources:
+    requests:
+      storage: "2Mi"
+
+---
+
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
+  name: "load"
+spec:
+  storageClassName: "nfs-client"
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: "20Gi"
 
