assign foundry to specific nodes

--- a/argocd/applications/foundryvtt/deployment.yaml
+++ b/argocd/applications/foundryvtt/deployment.yaml
@@ -102,6 +102,8 @@ spec:
               mountPath: "/rsync"
 
       hostname: "foundry-host"
+      nodeSelector:
+        kubernetes.io/hostname: "thicket1"
 
       volumes:
         - name: "container-cache"
