--- a/argocd/applications/foundryvtt-ando/deployment.yaml
+++ b/argocd/applications/foundryvtt-ando/deployment.yaml
@@ -99,6 +99,8 @@ spec:
               mountPath: "/rsync"
 
       hostname: "ando-mcfoundry-host"
+      nodeSelector:
+        kubernetes.io/hostname: "thicket2"
 
       volumes:
         - name: "container-cache"
