--- a/argocd/applications/foundryvtt/deployment.yaml
+++ b/argocd/applications/foundryvtt/deployment.yaml
@@ -101,7 +101,7 @@ spec:
             - name: "rsync"
               mountPath: "/rsync"
 
-      hostname: "foundry-host"
+      hostname: "mechamoogle-foundry"
       nodeSelector:
         kubernetes.io/hostname: "thicket1"
 
