--- a/argocd/applications/foundryvtt/deployment.yaml
+++ b/argocd/applications/foundryvtt/deployment.yaml
@@ -24,10 +24,10 @@ spec:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
               - matchExpressions:
-                - key: kubernetes.io/hostname
+                - key: "kubernetes.io/hostname"
                   operator: In
                   values:
-                    - thicket1
+                    - "thicket1"
 
       containers:
         - name: "foundryvtt"
@@ -153,9 +153,6 @@ spec:
 
   selector:
     app: "foundryvtt"
-    service: "foundryvtt"
-
-  type: NodePort
 
 ---
 
