pin all pods needing nextcloud-storage to same affinity

--- a/argocd/applications/nextcloud/proxy.yaml
+++ b/argocd/applications/nextcloud/proxy.yaml
@@ -25,6 +25,16 @@ spec:
       namespace: "nextcloud"
 
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                - key: "kubernetes.io/hostname"
+                  operator: In
+                  values:
+                    - "thicket3"
+
       containers:
         - name: "nextcloud-nginx"
           image: "nginx:1.19.6-alpine"
