--- a/argocd/applications/nextcloud/rsync.yaml
+++ b/argocd/applications/nextcloud/rsync.yaml
@@ -40,6 +40,16 @@ spec:
       namespace: "nextcloud"
 
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                - key: "kubernetes.io/hostname"
+                  operator: In
+                  values:
+                    - "thicket3"
+
       containers:
         - name: "rsync"
 
