--- a/argocd/applications/nextcloud/cron.yaml
+++ b/argocd/applications/nextcloud/cron.yaml
@@ -25,6 +25,16 @@ spec:
       namespace: "nextcloud"
 
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                - key: "kubernetes.io/hostname"
+                  operator: In
+                  values:
+                    - "thicket3"
+
       containers:
         - name: "nextcloud-cron"
           # UPDATE IN app.ymal AS WELL:
