does it still work if i revert the app

--- a/argocd/applications/grafana/kustomization.yaml
+++ b/argocd/applications/grafana/kustomization.yaml
@@ -7,5 +7,4 @@ resources:
 namespace: "observability"
 
 commonLabels:
-  app: "kube-prom-stack"
-  app.kubernetes.io/instance: "kube-prom-stack"
+  app: "grafana"
