--- a/argocd/applications/foundryvtt-ando/deployment.yaml
+++ b/argocd/applications/foundryvtt-ando/deployment.yaml
@@ -77,6 +77,11 @@ spec:
             - name: "foundryvtt-ando"
               containerPort: 30000
 
+          resources:
+            requests:
+              cpu: "1000m"
+              memory: "800Mi"
+
           volumeMounts:
             - name: "container-cache"
               mountPath: "/container-cache"
@@ -96,6 +101,11 @@ spec:
 
             - name: "TZ"
               value: "America/Los_Angeles"
+
+          resources:
+            requests:
+              cpu: "80m"
+              memory: "70Mi"
 
           volumeMounts:
             - name: "backup"
