--- a/argocd/applications/foundryvtt/deployment.yaml
+++ b/argocd/applications/foundryvtt/deployment.yaml
@@ -80,6 +80,11 @@ spec:
             - name: "foundryvtt"
               containerPort: 30000
 
+          resources:
+            requests:
+              cpu: "1000m"
+              memory: "600Mi"
+
           volumeMounts:
             - name: "container-cache"
               mountPath: "/container-cache"
@@ -99,6 +104,11 @@ spec:
 
             - name: "TZ"
               value: "America/Los_Angeles"
+
+          resources:
+            requests:
+              cpu: "80m"
+              memory: "70Mi"
 
           volumeMounts:
             - name: "backup"
