--- a/argocd/applications/miniflux/app.yaml
+++ b/argocd/applications/miniflux/app.yaml
@@ -79,6 +79,11 @@ spec:
             - name: "app"
               containerPort: 8080
 
+          resources:
+            requests:
+              cpu: "3m"
+              memory: "60Mi"
+
 ---
 
 apiVersion: v1
