--- a/argocd/applications/nextcloud/cron.yaml
+++ b/argocd/applications/nextcloud/cron.yaml
@@ -36,6 +36,11 @@ spec:
             - name: "TZ"
               value: "America/Los_Angeles"
 
+          resources:
+            requests:
+              cpu: "75m"
+              memory: "50Mi"
+
           volumeMounts:
             - mountPath: "/var/www/html"
               name: "nextcloud-storage"
