--- a/argocd/applications/nextcloud/db.yaml
+++ b/argocd/applications/nextcloud/db.yaml
@@ -56,6 +56,11 @@ spec:
             - name: "db"
               containerPort: 5432
 
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "200Mi"
+
           volumeMounts:
             - name: "postgres-data"
               mountPath: "/var/lib/postgresql/data"
