--- a/argocd/applications/nextcloud/proxy.yaml
+++ b/argocd/applications/nextcloud/proxy.yaml
@@ -38,6 +38,11 @@ spec:
               containerPort: 80
               protocol: "TCP"
 
+          resources:
+            requests:
+              cpu: "2m"
+              memory: "12Mi"
+
           volumeMounts:
             - mountPath: "/etc/nginx/nginx.conf"
               name: "nextcloud-nginx-config"
