--- a/argocd/applications/nextcloud/redis.yaml
+++ b/argocd/applications/nextcloud/redis.yaml
@@ -38,6 +38,11 @@ spec:
               containerPort: 6379
               protocol: "TCP"
 
+          resources:
+            requests:
+              cpu: "20m"
+              memory: "20Mi"
+
 ---
 
 apiVersion: v1
