add ociregistry reqs

--- a/argocd/applications/ociregistry/deployment.yaml
+++ b/argocd/applications/ociregistry/deployment.yaml
@@ -27,6 +27,11 @@ spec:
             - name: "app"
               containerPort: 5000
 
+          resources:
+            requests:
+              cpu: "1m"
+              memory: "25Mi"
+
           volumeMounts:
             - name: "auth"
               mountPath: "/var/lib/htpasswd"
