--- a/argocd/applications/vaultwarden/app.yaml
+++ b/argocd/applications/vaultwarden/app.yaml
@@ -88,6 +88,11 @@ spec:
             - name: "app"
               containerPort: 80
 
+          resources:
+            requests:
+              cpu: "10m"
+              memory: "75Mi"
+
           volumeMounts:
             - name: "app-data"
               mountPath: "/data"
