--- a/argocd/applications/vaultwarden/db.yaml
+++ b/argocd/applications/vaultwarden/db.yaml
@@ -50,6 +50,11 @@ spec:
             - name: "db"
               containerPort: 5432
 
+          resources:
+            requests:
+              cpu: "20m"
+              memory: "80Mi"
+
           volumeMounts:
             - name: "postgres-data"
               mountPath: "/var/lib/postgresql/data"
