--- a/argocd/applications/nextcloud/proxy.yaml
+++ b/argocd/applications/nextcloud/proxy.yaml
@@ -338,6 +338,10 @@ data:
                 # Optional: Don't log access to other assets
                 access_log off;
             }
+
+            location ~ \.mjs$ {
+              types { text/javascript mjs; }
+            }
         }
     }
 
