try different registry

--- a/argocd/applications/wikijs/app.yaml
+++ b/argocd/applications/wikijs/app.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
         - name: "wikijs"
-          image: "ghcr.io/requarks/wiki:2"
+          image: "requarks/wiki:2"
 
           env:
             - name: "DB_HOST"
